laboju admin skatu

--- a/admin.html
+++ b/admin.html
@@ -16,41 +16,48 @@
             <hr>
         </div>
 
-        <div class="content">
-
-            <a href="index.html">
-                <img class="back_btn" src="img/back.png" />
-                Atpakaļ
-            </a>
-
-            <h4 id="h4b">Admin skats</h4>
+        <div class="wrap">
             <div class="flex">
                 <div>
-                    Meklēt tehniku 
+                    <a href="index.html">
+                        <img class="back_btn" src="img/back.png" />
+                        Atpakaļ
+                    </a>
+                </div>
+                <div>
+                    <h2 id="h4b">Admin skats</h2>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="content">
+            <div class="flex">
+
+                <div>
+                    Meklēt tehniku
                 </div>
                 <div>
                     <input type="text">
-                    <br>
-                    <br>
-
+                    <br><br>
                     <a class="button" href="">Problēmu ziņojums</a>
+
                 </div>
                 <div>
-                    <a class="button" href="visu_klases_tehnikas_db.html">Kabinetos pieejamā tehnika</a>
-                    <br>
-                    <br>
-                    <a class="button" href="visas_tehnikas_db.html">Tehnikas datubāze</a>
+                    <a class="button" href="visu_klases_tehnikas_db.html">Kabinetos pieejamā tehnika</a><br><br>
+
+                    <a class="button" href="visas_tehnikas_db.html"> Tehnikas datubāze </a>
                 </div>
             </div>
-
-
-            <div class="footer">
-                <hr>
-                (c) 2020 Sia "Kafijas automāts"
-            </div>
-
         </div>
-        <!--beidzas wrap-->
+
+
+        <div class="footer">
+            <hr>
+            (c) 2020 Sia "Kafijas automāts"
+        </div>
+
+    </div>
+    <!--beidzas wrap-->
 
 </body>
 
