--- a/klases_tehnika.html
+++ b/klases_tehnika.html
@@ -60,7 +60,7 @@
                     <td>14.</td> <td>&#x2713</td><td>1</td><td>&#x2713</td><td><a href="klases_tehnikas_db.html?k=14">sīkāka informācija</a></td>
                  </tr>
                  <tr>
-                  <td>64.</td> <td>&#x2713</td><td>7</td><td>-</td><td><a href="klases_tehnikas_db.html?k=64.">sīkāka informācija</a></td>
+                  <td>64.</td> <td>&#x2713</td><td>7</td><td>-</td><td><a href="klases_tehnikas_db.html?k=64">sīkāka informācija</a></td>
                </tr>
                
             </table>
