--- a/klases_tehnikas_db.html
+++ b/klases_tehnikas_db.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8" />
 		<title>Datoru uzskaites sistēma-Klases tehnika</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-		<script src="js/head_food.js"></script>
-		<script src="js/angular.js"></script>
+		<meta charset="UTF-8">
 		<script src="js/get.js"></script>
 		<link href="css/style.css" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,27 +10,54 @@
 		var kab=findGetParameter("k");// kosaka kabinetu
 		var json='{"klase":"201", "dati":[{"name":"datori","count":3,"bojats":0,"desk":""},{"name":"Printeris","count":1,"bojats":"0","desk":"tīkla"}, {"name":"Projektors","count":1,"bojats":1,"desk":"2HDMI"}, {"name":"Skandas","count":1,"bojats":"0","desk":""}, {"name":"Rūteris","count":1,"bojats":0,"desk":"Parole:fkjbvjdf"}]}';
 		var obj = JSON.parse(json); 
+function rinda(){
+	dati=obj.dati;
+	for (i in dati) {
+		document.write("\t\t\t\t\t<tr>\n");
+		document.write("\t\t\t\t\t\t<td>"+obj.dati[i].name+"</td>\n");
+		document.write("\t\t\t\t\t\t<td>"+obj.dati[i].count+"</td>\n");
+		document.write("\t\t\t\t\t\t<td>"+obj.dati[i].bojats+"</td>\n");
+		document.write("\t\t\t\t\t\t<td>"+obj.dati[i].desk+"</td>\n");
+		document.write("\t\t\t\t\t</tr>\n");
+	}
+}
 	</script>
 	</head>
 	<body>
-	<div ng-app="myApp" ng-controller="myCtrl"><!-- start angular -->
-	<script>head(kab+". klasē pieejamā tehnika");</script>
+ 
+		<div class="wrap">
+
+			<div class="header">
+				<img src="img/logo.png" />
+				<h2>Datortehnikas uzskaites sistēma</h2>
+				<hr>
+			</div>
+	
+
+            <a href="klases_tehnika.html">
+                <img class="back_btn" src="img/back.png" />
+                Atpakaļ
+            </a>
+
+			<h4 id="h4b">
+			<script>
+				document.write(kab);
+			</script>
+			. klasē pieejamā tehnika</h4>			
 			<table>
-				<tbody ng-repeat="i in dati">
-					<tr>
-						<td>{{i.name}}</td>
-						<td>{{i.count}}</td>
-						<td>{{i.bojats}}</td>
-						<td>{{i.desk}}</td>
-					</tr>
-				</tbody>
+					<tbody ng-repeat="i in dati">
+						<script>rinda();</script>
+					</tbody>
 				</table>
 			</div>
-		<script>
-			foot();
-			Ctrl(obj.dati);
-		</script>
 
-	</div><!-- end angular -->
+
+			<div class="footer">
+				<hr>
+				(c) 2020 Sia "Kafijas automāts"
+			</div>
+
+		</div><!--beidzas wrap-->
+
     </body>
 </html>
