--- a/visu_klases_tehnikas_db.html
+++ b/visu_klases_tehnikas_db.html
@@ -5,9 +5,6 @@
 		<title>Skolas datortehnikas uzskaite - Kabinetu tehnika</title>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-		<script src="js/head_food.js"></script>
-		<script src="js/angular.js"></script>
 		<link href="css/style.css" rel="stylesheet" />
 		<script>
 			var json='{"dati":[{"kab":"201","proj":1,"datori":3,"print":1,"skandas":1,"ruteris":1},{"kab":"202","proj":1,"datori":15,"print":1,"skandas":0,"ruteris":0}]}';
@@ -15,9 +12,21 @@
 		</script>
 	</head>
 	<body>
-		<script>head("Klasēs pieejamā tehnika");</script>
+		<div class ="wrap">
+			<div class ="header">
+				<img src="img/logo.png"/>
+				<h2>Skolas datortehnikas uzskaite</h2>
 				<hr>
-				<div ng-app="myApp" ng-controller="myCtrl"><!-- start angular -->
+			</div><!--beidzas galva-->
+				
+
+            <a href="klases_tehnika.html">
+                <img class="back_btn" src="img/back.png" />
+                Atpakaļ
+            </a>
+
+			<h4 id="h4b">Klasēs pieejamā tehnika</h4>	
+				<hr>
 					
 				<table class="noborder">
 					<tbody>
@@ -53,21 +62,25 @@
 						</tr>
 					</thead>
 					<tbody ng-repeat="i in dati">
-						<tr class="link" ng-click="go('klases_tehnikas_db.html?k=',i.kab)">
+						<tr >
 							<td>{{i.kab}}</td>
 							<td>{{i.proj}}111</td>
 							<td>{{i.datori}}</td>
 							<td>{{i.skandas}}</td>
-							<td>sīkāk</td>
+							<td>
+								<a class="button" href="klases_tehnikas_db.html?k='+i.kab">sīkāk</a>
+							</td>
 						</tr>
 					</tbody>
 				</table>
-				</div><!-- beidzas angular -->
-			<script>
-				//alert(obj.dati[0].datori);
-				foot();
-				Ctrl(obj.dati);
-			</script>
+
+
+				<div class="footer">
+					<hr>
+					(c) 2020 Sia "Kafijas automāts"
+				</div>
+	
+			</div><!--beidzas wrap-->
 
 </body>
 
