--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 			<div class="content">
 				<br>
 				<div class="flex">
-					<div>
+					<div class="col">
 						<label>Lietotāja vārds</label><br><br>
 						<label>Parole</label><br><br>
-					</div><div>
+					</div>
+					<div class="col">
 						<input type="text"><br><br>
 						<input type="password"><br><br>
 						<a class="button" href="admin.html">Pierakstīties</a>
