--- a/klases_tehnika.html
+++ b/klases_tehnika.html
@@ -20,7 +20,7 @@
     <div class ="body">
         <div class="flex"> <!--saliek blakus kastes-->
             <div class="col">
-            <a href="klases_tehnika.html">
+            <a href="index.html">
                 <img class="back_btn" src="img/back.png" />
                 Atpakaļ
                </a>
