--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					</div>
 					<div>
 						<a class="button" href="klases_tehnika.html">Kabinetos pielietojamā tehnika</a><br><br>
-						<a class="button" href="">Ziņot par problēmu ar tehniku</a>
+						<a class="button" href="pieteikt.html">Ziņot par problēmu ar tehniku</a>
 					</div>
 				</div>
 			</div>
