--- a/admin.html
+++ b/admin.html
@@ -43,7 +43,7 @@
 
                 </div>
                 <div>
-                    <a class="button" href="visu_klases_tehnikas_db.html">Kabinetos pieejamā tehnika</a><br><br>
+                    <a class="button" href="klases_tehnika.html">Kabinetos pieejamā tehnika</a><br><br>
 
                     <a class="button" href="visas_tehnikas_db.html"> Tehnikas datubāze </a>
                 </div>
