--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 			<div class="header">
 				<img src="img/logo.png" />
-				<h2>Datortehnikas uzskaites sistēma</h2>
+				<h2>Skolas datortehnikas uzskaite</h2>
 				<hr>
 			</div>
 	
