--- a/klases_tehnikas_db.html
+++ b/klases_tehnikas_db.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Datoru uzskaites sistēma-Klases tehnika</title>
+		<title>Skolas datortehnikas uzskaite</title>
 		<meta charset="UTF-8">
 		<script src="js/get.js"></script>
 		<link href="css/style.css" rel="stylesheet" />
