--- a/visas_tehnikas_db.html
+++ b/visas_tehnikas_db.html
@@ -27,7 +27,7 @@
                 <option value="tumbas">tumbas</option>
             </select>
             <!-- *********************** -->
-            <button type="button" onclick="myFunction()">atlasīt tehniku</button>
+            <button class="button" type="button" onclick="myFunction()">atlasīt tehniku</button>
             <script>
                 function myFunction() {
                     //var x = document.getElementById("mySelect").value;
@@ -40,10 +40,10 @@
         </div>
 
         <div class="colUz3">
-            <input type="text" placeholder="Mekēt pec inventāra numura" id="myInput" onkeyup="meklet(1,'myInput')">
+            <input  type="text" placeholder="Mekēt pec inventāra numura" id="myInput" onkeyup="meklet(1,'myInput')">
         </div>
         <div class="colUz3">
-            <button type="button">pievienot tehniku</button>
+            <a class="button" href="pievienot_tehniku.html">pievienot tehniku</a>
         </div>
     </div>
     <!-- -->
