--- a/admin.html
+++ b/admin.html
@@ -39,7 +39,7 @@
                 <div>
                     <input type="text">
                     <br><br>
-                    <a class="button" href="">Problēmu ziņojums</a>
+                    <a class="button" href="problema.html">Problēmu ziņojums</a>
 
                 </div>
                 <div>
