--- a/pievienot_tehniku.html
+++ b/pievienot_tehniku.html
@@ -5,7 +5,7 @@
             Pievienot datortehniku
         </title>
         <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
-        <!--   <script src='js/nomainiLaukus.js'></script>   -->
+        <script src='js/nomainiLaukus.js'></script>
     </head>
     <body>
     <div class ="wrap">
@@ -62,32 +62,7 @@
             <br><hr>     
             <button class=button id=saglabat >Saglabāt</button> 
 
-<script>
-function nomainiLaukus() {
-var x = document.getElementById("tehnika").value;  
-document.getElementById("datortehnika").innerHTML = x;
-switch  (x){
-    case 'dators':
-    document.getElementById("nos1").textContent = "Procesors";
-    document.getElementById("nos2").textContent = "RAM";
-    document.getElementById("nos3").textContent = "Cietais disks";
-    document.getElementById("nos4").textContent = "OS";
-    break;
-    case 'monitors':
-    document.getElementById("nos1").textContent = "Ražotājs";
-    document.getElementById("nos2").textContent = "Izmērs";
-    document.getElementById("nos3").textContent = "Video ieejas";
-    document.getElementById("nos4").textContent = "Skaņa";
-    break;
-    case 'printeris':
-    document.getElementById("nos1").textContent = "Ražotājs";
-    document.getElementById("nos2").textContent = "tips";
-    document.getElementById("nos3").textContent = "Papīra izmērs";
-    document.getElementById("nos4").textContent = "toneris";
-    break;
-}
-}
-</script>
+
  
     </div>
 
