--- a/problema.html
+++ b/problema.html
@@ -57,7 +57,7 @@
 					<option value="">Risinās</option>
 					<option value="">Izpildīts</option>
 				</select></td>
-				<Td><input class="button" type="button" value="Apstiprināt" onclick=""></Td>
+				<Td><input class="button" type="button" value="Apstiprināt"></Td>
 			</tr>
 			<tr>
 				<td>Skandas</td>
@@ -69,7 +69,7 @@
 					<option value="" selected>Risinās</option>
 					<option value="">Izpildīts</option>
 				</select></td>
-				<Td><input class="button" type="button" value="Apstiprināt" onclick=""></Td>
+				<Td><input class="button" type="button" value="Apstiprināt"></Td>
 			</tr>
 			</tr>
 
