--- a/admin.html
+++ b/admin.html
@@ -20,12 +20,12 @@
             <div class="flex">
                 <div>
                     <a href="index.html">
-                        <img class="back_btn" src="img/back.png" />
+                        <img class="back_btn" src="img/back.png" >
                         Atpakaļ
                     </a>
                 </div>
                 <div>
-                    <h2 id="h4b">Admin skats</h2>
+                    <h2 id="h2b">Admin skats</h2>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
 
                 </div>
                 <div>
-                    <a class="button" href="klases_tehnika.html">Kabinetos pieejamā tehnika</a><br><br>
+                    <a class="button" href="klases_tehnika.html">Klasēs pieejamā tehnika</a><br><br>
 
                     <a class="button" href="visas_tehnikas_db.html"> Tehnikas datubāze </a>
                 </div>
