saliku head un foot funcijas

--- a/klases_tehnikas_db.html
+++ b/klases_tehnikas_db.html
@@ -22,26 +22,15 @@ function rinda(){
 	}
 }
 	</script>
-	</head>
-	<body>
- 
-		<div class="wrap">
+		<script src='js/head_food.js'></script>
+</head>
 
-			<div class="header">
-				<img src="img/logo.png" />
-				<h2>Datortehnikas uzskaites sistēma</h2>
-				<hr>
-				<a href="klases_tehnika.html">
-					<img class="back_btn" src="img/back.png" />
-					Atpakaļ
-				</a>
+<body>
+    <script>
+        head(kab+". klasē pieejamā tehnika","klases_tehnika.html");
+    </script>
+    <!-- -->
 
-			<h4 id="h4b">
-			<script>
-				document.write(kab);
-			</script>
-			. klasē pieejamā tehnika</h4>			
-			</div>
 			<table class="noborder">
 					<tbody>
 						<script>rinda();</script>
@@ -49,12 +38,11 @@ function rinda(){
 				</table>
 	
 
-			<div class="footer">
-				<hr>
-				(c) 2020 Sia "Kafijas automāts"
-			</div>
+ 
+    <!-- -->
+    <script>
+        foot();
+    </script>
+</body>
 
-		</div><!--beidzas wrap-->
-
-    </body>
 </html>
