--- a/admin.html
+++ b/admin.html
@@ -4,33 +4,16 @@
     <meta charset="UTF-8">
     <title>Admin skats</title>
     <link href="css/style.css" rel="stylesheet" />
+	<script src='js/head_food.js'></script>
+
 </head>
 
 <body>
+    <script>
+        head("Admina skats","index.html");
+    </script>
+    <!-- -->
 
-    <div class="wrap">
-
-        <div class="header">
-            <img src="img/logo.png" />
-            <h2>Datortehnikas uzskaites sistēma</h2>
-            <hr>
-        </div>
-
-        <div class="wrap">
-            <div class="flex">
-                <div>
-                    <a href="index.html">
-                        <img class="back_btn" src="img/back.png" >
-                        Atpakaļ
-                    </a>
-                </div>
-                <div>
-                    <h2 id="h2b">Admin skats</h2>
-                </div>
-            </div>
-        </div>
-        <br>
-        <div class="content">
             <div class="flex">
 
                 <div>
@@ -51,14 +34,10 @@
         </div>
 
 
-        <div class="footer">
-            <hr>
-            (c) 2020 Sia "Kafijas automāts"
-        </div>
-
-    </div>
-    <!--beidzas wrap-->
-
+    <!-- -->
+    <script>
+        foot();
+    </script>
 </body>
 
 </html>
