--- a/index.html
+++ b/index.html
@@ -5,20 +5,14 @@
 		<title>Skolas datortehnikas uzskaite</title>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
+		<script src='js/head_food.js'></script>
 	</head>
 	<body>
-  
-		<div class="wrap">
-
-			<div class="header">
-				<img src="img/logo.png" />
-				<h2>Skolas datortehnikas uzskaite</h2>
-				<hr>
-			</div>
-	
-			<div class="content">
-				<br>
-				<div class="flex">
+    <script>
+        head("","");
+    </script>
+    <!-- -->
+			<div class="flex">
 					<div class="col">
 						<label>Lietotāja vārds</label><br><br>
 						<label>Parole</label><br><br>
@@ -36,12 +30,10 @@
 			</div>
 
 
-			<div class="footer">
-				<hr>
-				(c) 2020 Sia "Kafijas automāts"
-			</div>
+    <!-- -->
+    <script>
+        foot();
+    </script>
+</body>
 
-		</div><!--beidzas wrap-->
-
-	</body>
 </html>
