--- a/problema.html
+++ b/problema.html
@@ -8,24 +8,15 @@
     <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
     <script src='js/block.js'></script>
     <script src='js/mekleet.js'></script>
+		<script src='js/head_food.js'></script>
 </head>
 
-	<body>
-		<div class ="wrap">
-			<div class ="header">
-				<img src="img/logo.png"/>
-				<h2>Skolas datortehnikas uzskaite</h2>
-				<hr>
-			</div><!--beidzas galva-->
-				
-
-            <a href="index.html">
-                <img class="back_btn" src="img/back.png" />
-                Atpakaļ
-            </a>
-
-			<h4 id="h4b">Datortehnikas problēmu saraksts</h4>	
-				<hr>
+<body>
+    <script>
+        head("Datortehnikas problēmu saraksts","index.html");
+    </script>
+    <!-- -->
+	<hr>
     <form>
 	<table>
         <thead>
@@ -78,13 +69,10 @@
     </table>
 </form>
 
-				<div class="footer">
-					<hr>
-					(c) 2020 Sia "Kafijas automāts"
-				</div>
-	
-			</div><!--beidzas wrap-->
-
+    <!-- -->
+    <script>
+        foot();
+    </script>
 </body>
 
 </html>
