--- a/problema.html
+++ b/problema.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset='utf-8'>
-    <title>Pieteikt problēmu</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
-    <script src='js/block.js'></script>
-    <script src='js/mekleet.js'></script>
-	<script src='js/head_food.js'></script>
-	<script src='js/main.js'></script>
-</head>
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>Pieteikt problēmu</title>
+		<meta name='viewport' content='width=device-width, initial-scale=1'>
+		<link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
+		<script src='js/block.js'></script>
+		<script src='js/mekleet.js'></script>
+		<script src='js/head_food.js'></script>
+		<script src='js/main.js'></script>
+	</head>
 
 <body>
     <script>
