--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
 		<script src='js/head_food.js'></script>
+		<script src='js/main.js'></script>
 	</head>
 	<body>
     <script>
