--- a/fetch_test.html
+++ b/fetch_test.html
@@ -6,7 +6,7 @@
 
         <table>
             <thead><tr><td>Tablulas galvene</td></tr></thead>
-            <tbody class="rindas"></tbody>
+            <tbody class="tabulasRindas"></tbody>
         </table>
 
     </body>
