--- a/fetch_test.html
+++ b/fetch_test.html
@@ -9,5 +9,9 @@
             <tbody class="tabulasRindas"></tbody>
         </table>
 
+        <script>
+            raditDatoruDB();
+        </script>
+
     </body>
 </html>
