visas tehnikas db
kautkas smieklīgs

--- a/_vecais_v_visas_tehnikas_db.html
+++ b/_vecais_v_visas_tehnikas_db.html
@@ -10,7 +10,6 @@
     <script src='js/block.js'></script>
     <script src='js/head_food.js'></script>
     <script src='js/mekleet.js'></script>
-    <script src='js/main.js'></script>
 </head>
 
 <body>
@@ -18,7 +17,7 @@
     <script>
         head("Visas tehnikas datubāze", "admin.html");
     </script>
-
+	
     <!-- -->
     <div class="row">
         <div class="colUz3">
@@ -53,11 +52,31 @@
                 <th>sīkāka informācija</th>
             </tr>
         </thead>
-        <tbody class="tabulasRindas"></tbody>
+        <tbody>
+            <tr>
+                <td>printeris</td>
+                <td>1239-554</td>
+                <td>12</td>
+                <td>-</td>
+                <td>sīkāk</td>
+            </tr>
+            <tr>
+                <td>dators</td>
+                <td>1239-556</td>
+                <td>13</td>
+                <td>-</td>
+                <td>sīkāk</td>
+            </tr>
+            <tr>
+                <td>tumbas</td>
+                <td>1239-551</td>
+                <td>13</td>
+                <td>-</td>
+                <td>sīkāk</td>
+            </tr>
+
+        </tbody>
     </table>
-    <script>
-        raditVisasTehnikasDB();
-    </script>
     <!-- -->
     <script>
         foot();
