Papildināta visas tehnikas datu bāze

--- a/klasesTexnika1.html
+++ b/klasesTexnika1.html
@@ -26,9 +26,9 @@
             
            <div class="col">
             <label for="datori">ir datori</label>
-            <input type="radio" id="datori">
+            <input type="radio"  id="datori">
             <label for="tumbas">ir skandas</label>
-            <input type="radio" id="tumbas"><br>
+            <input type="radio" id="skandas"><br>
             <label for="projektors">ir projektors</label>
             <input type="radio" id="projektors">
             <label for="kopetajs">ir kopētājs</label>
