visas tehnikas db json
visas tehnikas db json

--- a/_vecais_v2_visas_tehnikas_db.html
+++ b/_vecais_v2_visas_tehnikas_db.html
@@ -10,7 +10,7 @@
     <script src='js/block.js'></script>
     <script src='js/head_food.js'></script>
     <script src='js/mekleet.js'></script>
-    <script src='js/vsdb.js'></script>
+    <script src='js/main.js'></script>
 </head>
 
 <body>
