--- a/pieteikt.html
+++ b/pieteikt.html
@@ -59,7 +59,7 @@
 		</tbody>
 		<thead>
 			<tr>
-				<td colspan=4>Problēma:<textarea name="" rows="1" cols=""></textarea></td>
+				<td colspan=4>Problēma:<textarea name=""  rows="4" cols="50"></textarea></td>
 			</tr>
 			<tr>
 				<td colspan=4><input type="button"  class="button" value="Pieteikt" onclick=""></td>
