--- a/klases_tehnika.html
+++ b/klases_tehnika.html
@@ -21,7 +21,7 @@
             <div class="col">
                <input type="text"  id="mekletKlasi" >telpas nr.</input>
            </div>
-           <!--radio pogas-->
+           <!--čekboksi-->
             
            <div class="col">
             <input type="checkbox"  id="datori" checked>ir datori</input><br>
