Nem datus no https://majas-darbs-1-db.uldisgrunde.repl.co

--- a/admin.html
+++ b/admin.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8">
 		<title>Skolas datortehnikas uzskaite-Adminstrators</title>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<link rel='stylesheet' href='/static/css/style.css'>
-		<script src='/static/js/main.js'></script>
+		<link rel='stylesheet' href='css/style.css'>
+		<script src='js/main.js'></script>
 	</head>
 	<body>
 		<script>
-			head("Adminstratora skats","/");
+			head("Adminstratora skats","index.html");
 		</script>
     <!-- -->
 
@@ -21,13 +21,13 @@
                 <div>
                     <input type="text">
                     <br><br>
-                    <a class="button" href="/problema">Problēmu ziņojums</a>
+                    <a class="button" href="problema.html">Problēmu ziņojums</a>
 
                 </div>
                 <div>
-                    <a class="button" href="/klases">Klasēs pieejamā tehnika</a>
+                    <a class="button" href="klases.html">Klasēs pieejamā tehnika</a>
 					<br><br>
-                    <a class="button" href="/admin/tehnika/">Tehnikas datubāze </a>
+                    <a class="button" href="tehnika.html">Tehnikas datubāze </a>
                 </div>
             </div>
         </div>
