--- a/klase.html
+++ b/klase.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="UTF-8">
         <title>Skolas datortehnikas uzskaite-kabineta tehnika</title>
-        <link rel='stylesheet' href='static/css/style.css'>
-        <script src='static/js/main.js'></script>
+        <link rel='stylesheet' href='css/style.css'>
+        <script src='js/main.js'></script>
 	</head>
 	<body>
 		<script>
 			let kab=findGetParameter("k");// kosaka kabinetu
-			head(kab+". klasē pieejamā tehnika","/klases");
+			head(kab+". klasē pieejamā tehnika","klases.html");
 		</script>
 		<!-- -->
 		<hr></hr>
