--- a/pievienot.html
+++ b/pievienot.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8">
 		<title>Skolas datortehnikas uzskaite- pievienot datortehniku</title>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<link rel='stylesheet' href='static/css/style.css'>
-		<script src='static/js/main.js'></script>
+		<link rel='stylesheet' href='css/style.css'>
+		<script src='js/main.js'></script>
 	</head>
 	<body>
 		<script>
-			head("Jaunas tehnikas ievade","/admin/tehnika");
+			head("Jaunas tehnikas ievade","tehnika.html");
 		</script>
     <!-- -->
 
