--- a/problema.html
+++ b/problema.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8">
 		<title>Skolas datortehnikas uzskaite-problēmu saraksts</title>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<link rel='stylesheet' href='static/css/style.css'>
-		<script src='static/js/main.js'></script>
+		<link rel='stylesheet' href='css/style.css'>
+		<script src='js/main.js'></script>
 	</head>
 	<body>
 		<script>
-			head("Datortehnikas problēmu saraksts","/");
+			head("Datortehnikas problēmu saraksts","index.html");
 		</script>
 		<!-- -->
 		<hr></hr>
