--- a/tehnika.html
+++ b/tehnika.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8">
 		<title>Skolas datortehnikas uzskaite-visas tehnika</title>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<link rel='stylesheet' href='static/css/style.css'>
-		<script src='static/js/main.js'></script>
+		<link rel='stylesheet' href='css/style.css'>
+		<script src='js/main.js'></script>
 	</head>
 	<body>
 		<script>
-			head("Visas tehnikas datubāze", "/admin");
+			head("Visas tehnikas datubāze", "admin.html");
 		</script>
 
     <!-- -->
@@ -31,7 +31,7 @@
             <input type="text" placeholder="Mekēt pēc inventāra numura" id="myInput" onkeyup="meklet(1,'myInput')">
         </div>
         <div class="colUz3">
-            <a class="button" href="/admin/pievienot">pievienot tehniku</a>
+            <a class="button" href="pievienot.html">pievienot tehniku</a>
         </div>
     </div>
     <!-- -->
