--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 		<meta charset="UTF-8">
 		<title>Skolas datortehnikas uzskaite</title>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<link rel='stylesheet' href='static/css/style.css'>
-		<script src='static/js/main.js'></script>
+		<link rel='stylesheet' href='css/style.css'>
+		<script src='js/main.js'></script>
 	</head>
 	<body>
 		<script>
 			head("","");
 		</script>
     <!-- -->
-			<div class="flex">
-					<form method="post" action="admin.html" onsubmit="validateForm(this); return false;">
+				<form method="post" action="admin.html" onsubmit="validateForm(this); return false;">	<div class="flex">
 					<div class="col">
 						<label>Lietotājs:</label>
 						<br><br>
