--- a/klases.html
+++ b/klases.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
         <title>Klasēs pieejamā datortehnika-visu kabinetu tehnika</title>
-        <link rel='stylesheet' href='static/css/style.css'>
-        <script src='static/js/main.js'></script>
+        <link rel='stylesheet' href='css/style.css'>
+        <script src='js/main.js'></script>
 	</head>
 	<body>
 		<script>
-			head("Klasēs pieejamā tehnika","/");
+			head("Klasēs pieejamā tehnika","index.html");
 		</script>
     <!-- -->
 		<br>
