--- a/tehnika.html
+++ b/tehnika.html
@@ -45,7 +45,8 @@
                 <th>Informācija</th>
             </tr>
         </thead>
-        <tbody id="rinda"></tbody>
+        <tbody  id="rinda">
+		</tbody>
     </table>
     <script>
         foot();
