--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 			head("","");
 		</script>
     <!-- -->
-				<form method="post" action="admin.html" onsubmit="validateForm(this); return false;">	<div class="flex">
+			<div class="flex">
+				<form method="post" action="admin.html" onsubmit="validateForm(this); return false;">
 					<div class="col">
 						<label>Lietotājs:</label>
 						<br><br>
@@ -28,8 +29,8 @@
 						<br><br>
 						</div>
 					<div>
-						<a class="button" href="tehnika.html">Datortehnika kabinetos</a><br><br>
-						<a class="button" href="pieteikt.html">Ziņot problēmu</a>
+						<a class="button" href="klases_tehnika.html">Kabinetos pielietojamā tehnika</a><br><br>
+						<a class="button" href="pieteikt.html">Ziņot par problēmu ar tehniku</a>
 
 					</div>
 					</form>
