--- a/pieteikt.html
+++ b/pieteikt.html
@@ -17,7 +17,7 @@
         <thead>
             <tr>
                 <th colspan=2>Tips<br>
-					<select id="myType" onchange ="meklet(1, this.id)";>
+					<select id="tehnika" onchange ="meklet(1, this.id)";>
 						<option value="">Viss saraksts</option>
 
 					</select>
@@ -66,7 +66,7 @@
     <!-- -->
     <script>
         foot();
-		getList("unity_type","myType", "");
+		getList("unity_type","tehnika", "");
 		getList("room","myCab", "");
 	</script>
 </body>
