--- a/pievienot.html
+++ b/pievienot.html
@@ -20,10 +20,7 @@
             </div>
             <div class="col">
                 <select name="tehnika" id="tehnika" onchange="nomainiLaukus()">
-                    <option value="dators">Dators</option>
-                    <option value="monitors">Monitors</option>
-                    <option value="printeris">Printeris</option>
-                </select>
+                 </select>
             </div>
         </div>
         
@@ -47,6 +44,7 @@
     <!-- -->
     <script>
         foot();
+		getList("unity_type","tehnika", "Dators");
     </script>
 </body>
 
