--- a/klases.html
+++ b/klases.html
@@ -49,6 +49,7 @@
     <script>
         foot();
 		klasesTehnikaf();
+		//getData("visas_tehnikas_db","rinda",["name","invNr","room","note","status"],'statuss("rinda")');
     </script>
 </body>
 
